test/parser/good/case-insensitive.ulm
.text

main:
    Add rOuT r0 R0
    NOP
