test/parser/bad/redeclaration_of_label.ulm
.text
main:
    nop

; main label redeclared
main:
    nop